Address fourth-pass review threads: hash all bar fields, reject duplicate sweep keys, zero-fold geometry guard, generalized artifact collision guard, forecast window caps